# clinical-retrieval-pt

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml
.github/workflows/: python-build.yaml
src/clinical_retrieval_pt/: __init__.py  configs.py  encoders.py  fusion.py  heads.py  model.py  pooling.py  query_projection.py  retrieval_encoder.py  retrievers.py  types.py
src/clinical_retrieval_pt/conf/encoder/: meds_code.yaml
src/clinical_retrieval_pt/conf/fusion/: replace.yaml
src/clinical_retrieval_pt/conf/head/: identity.yaml
src/clinical_retrieval_pt/conf/pooling/: identity.yaml
src/clinical_retrieval_pt/conf/query_projector/: identity.yaml
src/clinical_retrieval_pt/conf/retrieval_encoder/: identity.yaml
src/clinical_retrieval_pt/conf/retriever/: static.yaml
src/medrap/: __init__.py  batch_adapter.py  cli.py  config_validation.py  configs.py  encoders.py  fusion.py  heads.py  lightning_datamodule.py  lightning_module.py  losses.py  model.py  pooling.py  query_projection.py  retrieval_encoder.py  retrieval_eval.py  retrievers.py  runtime.py  search.py  task.py  training_metrics.py  types.py
src/medrap/conf/: __init__.py  _eval.yaml  _train.yaml
src/medrap/conf/batch_adapter/: default.yaml
src/medrap/conf/callbacks/: default.yaml
src/medrap/conf/datamodule/: default.yaml  demo.yaml  meds_torchdata.yaml  task_supervised.yaml
src/medrap/conf/encoder/: meds_code.yaml  token_embedding.yaml
src/medrap/conf/experiments/: __init__.py  semi_synthetic_mimic_demo.yaml
src/medrap/conf/fusion/: concat.yaml
src/medrap/conf/head/: linear.yaml
src/medrap/conf/lightning_module/: default.yaml
src/medrap/conf/lightning_module/metrics/: default.yaml
src/medrap/conf/lightning_module/optimizer/: adamw.yaml
src/medrap/conf/logger/: csv.yaml
src/medrap/conf/metrics/: binary.yaml  categorical.yaml  regression.yaml
src/medrap/conf/model/: default.yaml
src/medrap/conf/model/fusion/: replace.yaml
src/medrap/conf/model/head/: identity.yaml  linear.yaml
src/medrap/conf/model/retrieval_encoder/: identity.yaml
src/medrap/conf/optimizer/: adamw.yaml
src/medrap/conf/pooling/: identity.yaml  masked_mean.yaml
src/medrap/conf/query_projector/: identity.yaml  linear.yaml  sequence_mean.yaml
src/medrap/conf/retrieval_encoder/: mean_pooled.yaml  token_feature.yaml
src/medrap/conf/retriever/: in_memory.yaml  in_memory_from_pt.yaml  in_memory_topk.yaml  in_memory_topk_from_pt.yaml  static.yaml  topk_payload.yaml  topk_payload_from_pt.yaml
src/medrap/conf/task/: binary.yaml  categorical.yaml  regression.yaml
src/medrap/conf/trainer/: default.yaml
src/medrap/conf/training/loss/: binary_bce.yaml
src/medrap/conf/training/module/: supervised_lightning.yaml
src/medrap/conf/training/task/: binary_classification.yaml
src/medrap/conf/training/trainer/: lightning_demo.yaml
src/medrap/experiments/: __init__.py
src/medrap/experiments/common/: __init__.py  reporting.py
src/medrap/experiments/semi_synthetic/: __init__.py  backend.py  batch_adapter.py  callbacks.py  components.py  corpus.py  datamodule.py  modeling.py  preprocessing.py  run.py
src/medrap/experiments/semi_synthetic/resources/: beta_blocker_labels.json
src/medrap/experiments/synthetic/: __init__.py  core.py  corpus.py  evaluation.py  retrievers.py  tasks.py
tests/: test_cli.py  test_configs.py  test_hf_dataset_retriever.py  test_hydra_config_integration.py  test_lightning_module.py  test_meds_batch_support.py  test_module_composition.py  test_package_name.py  test_retrieval_eval.py  test_synthetic_experiments.py  test_task.py  test_task_mode_validation.py  test_training_signal.py
tests/experiments/: test_semi_synthetic_experiment.py
tests/support/: __init__.py  demo_lightning_datamodule.py
